<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:icon="@drawable/icon_app_settings"
        android:title="@string/application_configuration">

        <SwitchPreferenceCompat
            android:key="@string/dark_mode_key"
            android:summaryOff="@string/dark_mode_summary_off"
            android:summaryOn="@string/dark_mode_summary_on"
            android:title="@string/dark_mode_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:icon="@drawable/icon_about"
        android:title="@string/about">

        <Preference
            android:key="@string/contact_me_key"
            android:title="@string/contact_me_title"
            android:summary="@string/contact_me_summary"/>

        <Preference
            android:key="@string/version_key"
            android:title="@string/version_title"/>

    </PreferenceCategory>

</PreferenceScreen>